pre-visit prompt updated
